[package]
name = "fou-lstm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = "0.3.3"
candle-datasets = "0.3.3"
candle-nn = "0.3.3"
indicatif = "0.17.7"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand_distr = "0.4.3"
stochastic-rs = "0.3.5"
