[package]
name = "fou-lstm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = {version = "0.3.3", features = ["accelerate", "metal"]}
candle-datasets = {version = "0.3.3"}
candle-metal-kernels = "0.3.3"
candle-nn = {version = "0.3.3", features = ["accelerate", "metal"]}
clap = { version = "4.5.0", features = ["derive"] }
indicatif = "0.17.7"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
polars = "0.37.0"
polars-io = {version = "0.37.0", features = ["csv"]}
rand_distr = "0.4.3"
stochastic-rs = "0.3.5"
